2005-08-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcalendar.c (gtk_calendar_init): Fix the calculation
	of week_start.  (#314473, JP Rosevaar)

2005-08-25  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gtk/gtkfilesystemmodel.c (idle_finished_loading_cb): Acquire GDK
	lock.  (#314533, Thomas Fitzsimmons)

2005-08-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktoolbar.c (_gtk_toolbar_elide_underscores): Handle
	NULL gracefully.  (#314523, Ed Catmur)

2005-08-25  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkcursor-x11.c (gdk_x11_display_set_cursor_theme): 
	Handle theme == NULL.

2005-08-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenutoolbutton.c (menu_position_func): Take widget
	y offset into account when positioning the popup.  (#314470,
	Christian Persch)

2005-08-25  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkscreen.c (gdk_screen_get_type): Use gdk_screen_init
	as instance_init, not base_init! (#314452, Fix from Frederic
	Crozat,	reported by Joe Marcus Clarke). Trivial cleanup: use -1.
	rather than 1 for a negative flag value.

2005-08-24  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpango.c (draw_error_underline): Add a note about
	cut-and-paste between here and Pango.

2005-08-24  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.8.2 ===

	* gtk/gtkclipboard.c (request_image_received_func): Use the correct
	callback for image/gif, and also try image/bmp.  (#314086,  Mark 
	Wielaard)

	* gtk/gtkfilesystemunix.c (gtk_file_system_unix_volume_render_icon): 
	Use gnome-dev-harddisk for volumes, not gnome-fs-blockdev.  (#314382,
	Sebastien Bacher)
	
	* NEWS: Updates

	* gtk/gtksettings.c (gtk_settings_get_for_screen): Make sure font
	and cursor settings get propagated down to the screen initially.
	Pointed out by Frederic Crozat.

	* gtk/gtkicontheme.c (ensure_valid_themes): Don't try to send a client
	message if the screen is NULL. Noticed by Kjartan Maraas.

2005-08-24  Matthias Clasen  <mclasen@redhat.com>

	* Bump version
